--- a/src/pages/publicaciones.astro
+++ b/src/pages/publicaciones.astro
@@ -14,7 +14,7 @@ const publicaciones = await Astro.glob("../content/publicaciones/*.md");
       <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight">
         Artículos y comentarios publicados
       </h1>
-      <p class="text-lg text-gray-600 mt-2">Encontrá aquí información útil</p>
+      <p class="text-lg text-gray-600 mt-2">Acá podés encontrar nuestros artículos y comentarios publicados, donde acordamos las últimas tendencias, novedades legales y temas relevantes en el ámbito del derecho tecnológico y digital</p>
       <div class="mt-6">
         <ul>
           {publicaciones.map((publicacion) => (
