--- a/src/pages/publicaciones.astro
+++ b/src/pages/publicaciones.astro
@@ -3,8 +3,11 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Navbarlight from "@components/navbar/navbarlight.astro";
 
-// Importar dinámicamente las publicaciones
-const publicaciones = await Astro.glob("../content/publicaciones/*.md");
+// Importar los datos desde el archivo de datos
+import { fetchGoogleSheetData } from '../utils/google-sheets';
+
+// Obtener los datos de las publicaciones desde Google Sheets
+const sheetData = await fetchGoogleSheetData();
 ---
 
 <Layout title="Publicaciones">
@@ -17,12 +20,12 @@ const publicaciones = await Astro.glob("../content/publicaciones/*.md");
       <p class="text-lg text-gray-600 mt-2">Acá podés encontrar nuestros artículos y comentarios publicados, donde acordamos las últimas tendencias, novedades legales y temas relevantes en el ámbito del derecho tecnológico y digital</p>
       <div class="mt-6">
         <ul>
-          {publicaciones.map((publicacion) => (
-            <li key={publicacion.frontmatter.titulo} class="mb-6 border-b border-gray-300 pb-6">
+          {sheetData.map((row) => (
+            <li key={row[0]} class="mb-6 border-b border-gray-300 pb-6">
               <div class="flex justify-between items-center">
-                <h3 class="text-xl font-semibold text-gray-800">{publicacion.frontmatter.titulo}</h3>
+                <h3 class="text-xl font-semibold text-gray-800">{row[0]}</h3> {/* Titulo */}
                 <a 
-                  href={publicacion.frontmatter.link} 
+                  href={row[1]}  {/* Link */}
                   target="_blank" 
                   class="uppercase text-c pill mt-3 px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:#2d3748 transition-colors duration-300 ease-in-out">
                   Ver publicación
