--- a/src/pages/novedad/[index].astro
+++ b/src/pages/novedad/[index].astro
@@ -4,7 +4,7 @@ import Layout from '../../layouts/Layout.astro';
 import Navbarlight from "@components/navbar/navbarlight.astro";
 import Container from "@components/container.astro";
 import { marked } from 'marked'; // Para procesar Markdown
-
+import '../novedades.css';
 // Obtener el índice dinámico de la URL
 const { index } = Astro.params;
 
