--- a/src/components/novedades.astro
+++ b/src/components/novedades.astro
@@ -21,6 +21,9 @@ const noticias = await fetchNoticias();
 ---
 
 <style>
+ h1, h2, h3 {
+    font-family: "Literata", serif;
+  }
   section {
     background-color: var(--color-azul-accent);
   }
@@ -32,7 +35,7 @@ const noticias = await fetchNoticias();
     grid-template-rows: auto 1fr;
   }
   .novedad h3{
-    font-family: "Literata, sans-serif";
+    font-family: "Literata", serif;
   }
 </style>
 
