--- a/src/pages/novedades.astro
+++ b/src/pages/novedades.astro
@@ -8,6 +8,18 @@ import { marked } from 'marked'; // Asegúrate de que 'marked' esté bien import
 // Obtener los datos de la hoja de Google Sheets
 const { novedades } = await fetchGoogleSheetData();
 ---
+<style>
+
+* {
+        font-family: "Archivo", sans-serif;
+      }
+ 
+ h1, h2, h3 {
+    font-family: "Literata", serif;
+  }
+
+
+</style>
 
 <Layout title="Novedades">
   <Navbarlight />  
@@ -39,7 +51,7 @@ const { novedades } = await fetchGoogleSheetData();
             <div class="w-full md:w-2/4 p-4 px-8 flex flex-col justify-between">
               <div>
                 <h2 class="text-2xl font-semibold  text-[#3b5e97] mb-2 text-justify">
-                  <a href={link}>{titulo}</a>
+                  <a href={link}> <h2> {titulo} </h2> </a>
                 </h2>
                 <p class="text-gray-700 mb-2 text-justify">{descripcion}</p>
                 <p class="text-sm text-gray-500">{fecha}</p>
