SEO de paginas y novedades tomadejson estatico

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ export interface Props {
   title: string;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
+const canonicalURL = "https://chestudioabogados.com/novedades";
 
 const resolvedImageWithDomain = new URL(
   "/opengraph.jpg",
