--- a/src/pages/novedad/[index].astro
+++ b/src/pages/novedad/[index].astro
@@ -1,40 +1,62 @@
 ---
-import { fetchGoogleSheetData } from '../../utils/google-sheets';
 import Layout from '../../layouts/Layout.astro';
+import { SEO } from "astro-seo";
 import Navbarlight from "@components/navbar/navbarlight.astro";
 import Container from "@components/container.astro";
 import { marked } from 'marked'; // Para procesar Markdown
-import '../novedades.css';
 import Cta from "@components/cta.astro";
+import '../novedades.css'
+
+// Importar el archivo JSON desde la carpeta public/data
+import novedades from '../../../public/data/novedades.json';
 
 // Obtener el índice dinámico de la URL
 const { index } = Astro.params;
 
-// Carga de datos en tiempo de ejecución
-const { novedades } = await fetchGoogleSheetData();
+// Asegurarse de que el índice sea válido
 const novedad = novedades[parseInt(index)] ?? {}; // Evitar errores si el índice no es válido
 
 // Extraer datos de la novedad
-const titulo = novedad[0] || "Novedad no encontrada";
-const descripcion = novedad[1] || "No se encontró descripción.";
-const fecha = novedad[3] || "Fecha no disponible.";
-const imagen = novedad[2] || "";
-const cuerpoTexto = novedad[4] ? marked(novedad[4]) : "No hay contenido adicional.";
+const titulo = novedad.titulo || "Novedad no encontrada";
+const descripcion = novedad.descripcion || "No se encontró descripción.";
+const fecha = novedad.fecha || "Fecha no disponible.";
+const imagen = novedad.imagen || "/default-image.jpg";
+const cuerpoTexto = novedad.contenido ? marked(novedad.contenido) : "No hay contenido adicional.";
+
+// URL canónica
+const canonicalURL = `https://chestudioabogados.com/novedades/${index}`; // URL dinámica
 ---
 
 <style>
   * {
-        font-family: "Archivo", sans-serif;
-      }
- 
+    font-family: "Archivo", sans-serif;
+  }
+
   h1, h2 {
     font-family: "Literata", serif;
   }
- 
-
 </style>
 
 <Layout title={titulo}>
+  <!-- SEO para la novedad dinámica -->
+  <SEO
+    title={titulo}
+    description={descripcion}
+    canonical={canonicalURL}
+    openGraph={{
+      basic: {
+        url: canonicalURL,
+        type: "article",
+        title: titulo,
+        description: descripcion,
+        image: imagen, // Imagen de la novedad
+      },
+      image: {
+        alt: `Imagen de la novedad: ${titulo}`,
+      },
+    }}
+  />
+
   <Navbarlight />
 
   <!-- Contenedor del banner -->
@@ -42,7 +64,7 @@ const cuerpoTexto = novedad[4] ? marked(novedad[4]) : "No hay contenido adiciona
     <!-- Mitad izquierda: Imagen -->
     <div class="w-full lg:w-1/3 flex items-center justify-center">
       <img 
-        src={imagen || '/default-image.jpg'} 
+        src={imagen} 
         alt={titulo} 
         class="w-full h-auto lg:h-full object-contain lg:object-cover"
       />
