--- a/src/pages/publicaciones.astro
+++ b/src/pages/publicaciones.astro
@@ -2,6 +2,8 @@
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Navbarlight from "@components/navbar/navbarlight.astro";
+import { SEO } from "astro-seo";
+
 
 // Importar el archivo JSON desde la carpeta public/data
 import publicaciones from '../../public/data/publicaciones.json';
