--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -2,6 +2,7 @@
 import { Picture } from "astro:assets";
 import agusImage from "assets/imgs/abogado_chalhub.png";
 import caroImage from "assets/imgs/abogada_lipchack.jpg";
+import aboutData from "../../public/data/about.json"; // Importa el archivo JSON
 ---
 
 <style>
@@ -27,7 +28,7 @@ import caroImage from "assets/imgs/abogada_lipchack.jpg";
 <section id="about" class="py-20 px-5 text-aa">
   <div class="my-20 md:mt-0 text-center grid justify-center">
     <span class="text-3xl leading-3">*</span>
-    <h2 class="text-3xl lg:text-3xl lg:tracking-tight">Qui&eacute;nes Somos</h2>
+    <h2 class="text-3xl lg:text-3xl lg:tracking-tight">Quiénes Somos</h2>
     <p class="text-lg max-w-3xl mt-4 text-balance">
       Somos una red de abogados apasionados por el derecho y la tecnología. El
       proyecto de CH Estudio nació con la idea de unir a los mejores
@@ -36,6 +37,7 @@ import caroImage from "assets/imgs/abogada_lipchack.jpg";
     </p>
   </div>
 
+  <!-- Persona 1: Agustín -->
   <div class="grid md:flex md:items-center justify-center gap-5 mt-16">
     <div class="grid gap-3">
       <Picture
@@ -45,7 +47,7 @@ import caroImage from "assets/imgs/abogada_lipchack.jpg";
       />
       <a
         class="text-c underline"
-        href="https://www.linkedin.com/in/agust%C3%ADn-chalhub-93a7ab7a/"
+        href={aboutData[0].linkedin}
         rel="noreferrer"
         target="_blank"
       >LINKEDIN<span class="material-symbols-outlined">north_east</span>
@@ -53,32 +55,20 @@ import caroImage from "assets/imgs/abogada_lipchack.jpg";
     </div>
     <div class="grid gap-3">
       <h3 class="text-4xl">
-        Agust&iacute;n <span class="font-bold">Chalhub</span>
+        {aboutData[0].name.split(" ")[0]} <span class="font-bold">{aboutData[0].name.split(" ")[1]}</span>
       </h3>
       <span class="flex gap-2 rounded-full bg-aa w-fit px-6 text-white uppercase">
-        Founder
+        {aboutData[0].role}
       </span>
       <div class="max-w-md grid gap-2">
-        <p>
-          Agustín es abogado egresado de la <span class="font-bold">Universidad de Buenos Aires</span> (UBA). A
-          lo largo de su carrera profesional adquirió una gran experiencia en
-          estudios jurídicos de primer nivel (Marval O' Farrel & Mairal,
-          Nicholson & Cano, Bildenlex Abogados).
-        </p>
-        <p>
-          Durante ese camino se desempeñó en distintas áreas del Derecho, lo
-          cual hoy en día le proporciona un <span class="font-bold">valor agregado a la hora de asesorar
-          y aconsejar a los clientes.</span>
-        </p>
-        <p>
-          Actualmente se desempeña en litigios de alta complejidad, y en Derecho
-          y Nuevas Tecnologías (resguardo de evidencia digital, conflictos
-          tecnológicos, cibercrimen).
-        </p>
+        <p>{aboutData[0].desc1}</p>
+        <p>{aboutData[0].desc2}</p>
+        <p>{aboutData[0].desc3}</p>
       </div>
     </div>
   </div>
 
+  <!-- Persona 2: Carolina -->
   <div class="grid md:flex md:items-center justify-center gap-5 mt-16">
     <div class="grid gap-3">
       <Picture
@@ -88,7 +78,7 @@ import caroImage from "assets/imgs/abogada_lipchack.jpg";
       />
       <a
         class="text-c underline"
-        href="https://ar.linkedin.com/in/carolina-lipchak-16074712b"
+        href={aboutData[1].linkedin}
         rel="noreferrer"
         target="_blank"
       >LINKEDIN<span class="material-symbols-outlined">north_east</span>
@@ -96,21 +86,15 @@ import caroImage from "assets/imgs/abogada_lipchack.jpg";
     </div>
     <div class="grid gap-3">
       <h3 class="text-4xl">
-        Carolina <span class="font-bold">Lipchak</span>
+        {aboutData[1].name.split(" ")[0]} <span class="font-bold">{aboutData[1].name.split(" ")[1]}</span>
       </h3>
       <span class="flex gap-2 rounded-full bg-af w-fit px-6 text-white uppercase">
-        Associate
+        {aboutData[1].role}
       </span>
       <div class="max-w-md grid gap-2">
-        <p>
-          Carolina es abogada egresada de la <span class="font-bold">Universidad de Buenos Aires</span> (UBA) y una profesional multifacética que combina su pasión por el derecho con su vocación docente.
-        </p>
-        <p>
-          Su experiencia en diversas áreas del derecho y asesorando a emprendedores le otorgan una <span class="font-bold">visión integral de las problemáticas legales y la capacidad de brindar soluciones</span> adaptadas a cada caso.
-        </p>
-        <p>
-          Actualmente se especializa en litigios de Defensa del Consumidor.
-        </p>
+        <p>{aboutData[1].desc1}</p>
+        <p>{aboutData[1].desc2}</p>
+        <p>{aboutData[1].desc3}</p>
       </div>
     </div>
   </div>
