--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -14,7 +14,7 @@ const menuitems = [
   },
   {
     title: "Novedades",
-    path: "/blog",
+    path: "/novedades",
   },
   {
     title: "Contacto",
