--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -19,8 +19,9 @@ import Link from "@components/ui/link.astro";
   </h1>
 
   <Link
-    href="#about"
+    href="https://43ce9ff9-3ace-4065-bc1d-3dd7aad3db58.filesusr.com/ugd/67d70e_100f37085dc945f8bfd0d56a36bfb2f4.pdf"
     class="uppercase text-c pill"
+    target="_blank"
   >
     Saber m&aacute;s
   </Link>
