--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Novedades from "@components/novedades.astro";
 import About from "@components/about.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import Wh from "@components/wh.astro";
 ---
 <style>
   .main-container {
@@ -29,4 +30,5 @@ import Navbar from "@components/navbar/navbar.astro";
   <Features />
   <Novedades />
   <Cta />
+  <Wh phone="5491171387291" />
 </Layout>
