--- a/src/pages/novedad/[enlace].astro
+++ b/src/pages/novedad/[enlace].astro
@@ -8,6 +8,7 @@ import Cta from "@components/cta.astro";
 import '../novedades.css';
 
 import novedades from '../../../public/data/novedades.json';
+import Wh from '@components/wh.astro';
 
 const { enlace } = Astro.params;
 const novedad = novedades.find(n => n.enlace === enlace) ?? {};
@@ -20,36 +21,62 @@ const contenido = novedad.contenido ? marked(novedad.contenido) : "";
 const canonicalURL = `https://mi-sitio-web.com/novedades/${enlace}`;
 ---
 
-<style global>
-  * {
-    font-family: "Archivo", sans-serif;
-  }
+<style global>.markdown-body {
+  line-height: 1.75;
+  font-size: 1.05rem;
+}
 
-  h1, h2 {
-    font-family: "Literata", serif;
-  }
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-weight: 700;
+  line-height: 1.3;
+}
 
-  /* Estilos para el cuerpo de Markdown */
-  .markdown-body h1,
-  .markdown-body h2,
-  .markdown-body h3,
-  .markdown-body p {
-    margin-bottom: 1rem;
-  }
+.markdown-body h1 {
+  font-size: 2rem;
+}
 
-  .markdown-body ul {
-    margin-left: 1.5rem;
-  }
+.markdown-body h2 {
+  font-size: 1.5rem;
+}
 
-  .markdown-body li {
-    margin-bottom: 0.5rem;
-  }
+.markdown-body h3 {
+  font-size: 1.25rem;
+}
 
-  .markdown-body a {
-    color: #3490dc;
-    text-decoration: underline;
-  }
+.markdown-body p {
+  margin-bottom: 1.25rem;
+}
+
+.markdown-body ul {
+  margin-left: 1.5rem;
+  margin-bottom: 1.25rem;
+}
+
+.markdown-body li {
+  margin-bottom: 0.5rem;
+}
+
+.markdown-body a {
+  color: #3490dc;
+  text-decoration: underline;
+}
+
+.markdown-body strong {
+  font-weight: 600;
+}
+
+.markdown-body hr {
+  margin: 2rem 0;
+  border: none;
+  border-top: 1px solid #ddd;
+}
+
 </style>
+
 
 <Layout title={titulo}>
   <SEO
@@ -88,8 +115,9 @@ const canonicalURL = `https://mi-sitio-web.com/novedades/${enlace}`;
 
     <!-- Inyectar el HTML procesado con marked -->
     <div class="mt-6 markdown-body">
-      <div class="text-base text-gray-800 whitespace-pre-wrap leading-relaxed" set:html={contenido}></div>
+<div class="text-base text-gray-800" set:html={contenido}></div>
     </div>
     <Cta />
+        <Wh phone="5491171387291" />
   </Container>
 </Layout>
