--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -31,7 +31,7 @@ const socials = [
   {
     name: "Mail",
     icon: "ic:outline-mail",
-    path: "mailto:chestudioinfo@gmail.com",
+    path: "mailto:achalhub@chestudioabogados.com",
   },
   {
     name: "Teléfono",
