--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -105,13 +105,12 @@ import Icon from "astro-icon";
   <h2>Contacto</h2>
   <div class="contacto-lista">
    <a
-  href="mailto:chestudioinfo@gmail.com"
-  rel="noopener noreferrer"
+  href="mailto:achalhub@chestudioabogados.com"
   class="contacto-link mail"
   id="mailtoLink"
 >
       <Icon name="mdi:email" class="contacto-icon" />
-      chestudioinfo@gmail.com
+      achalhub@chestudioabogados.com
     </a>
 
     <a
@@ -125,16 +124,3 @@ import Icon from "astro-icon";
     </a>
   </div>
 </section>
-
-<script is:inline>
-  window.addEventListener('DOMContentLoaded', () => {
-    const mailtoLink = document.getElementById('mailtoLink');
-    if (!mailtoLink) return;
-
-    mailtoLink.addEventListener('click', (e) => {
-      e.stopPropagation();   // Evita que otros listeners globales bloqueen el evento
-      e.preventDefault();    // Evita el comportamiento por defecto para controlarlo manualmente
-      window.location.href = mailtoLink.href;  // Abre el cliente de correo
-    });
-  });
-</script>
