--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "astro:assets";
-import agusImage from "assets/imgs/abogado_chalhub.png";
-import caroImage from "assets/imgs/abogada_lipchack.jpg";
+import agusImage from "assets/imgs/Agustin_Chalhub.jpg";
+import caroImage from "assets/imgs/Lipchack.jpeg";
 import aboutData from "../../public/data/about.json"; // Importa el archivo JSON
 ---
 
