--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -43,6 +43,13 @@ const menuitems = [
   li:hover{
     opacity: 0.5;
   }
+  header {
+  height: 20vh; /* o el valor medido */
+  line-height: 20vh; /* para alinear verticalmente */
+
+}
+nav{z-index: 10;}
+
 </style>
 
 <header class="flex flex-col lg:flex-row justify-center items-center">
